# smitters

./: Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
examples/: demo.rs  hello.rs  show.rs
src/: chart_fancy.rs  chart_simple.rs  context.rs  drawing_primitives.rs  egui.rs  lib.rs  math.rs  trigonometry.rs
