[package]
name = "smitters"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/enomado/smitters"

description = "Smith chart, Volpert–Smith chart, egui"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kurbo = "^0.9.5"
egui = "^0.22.0"
eframe = "^0.22.0"
env_logger = "^0.10.0"
itertools-num = "^0.1.3"
