[package]
name = "smitters"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/enomado/smitters"
keywords = ["radio", "gui", "graphics", "math", "2d"]
categories = ["visualization"]
description = "Smith chart, Volpert-Smith chart, egui"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kurbo = "^0.9.5"
egui = "^0.32.0"
eframe = "^0.32.0"
itertools-num = "^0.1.3"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
log = "0.4.27"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
