[package]
name = "smitters"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/enomado/smitters"
keywords = ["radio", "gui", "graphics", "math", "2d"]
categories = ["visualization"]
description = "Smith chart (Volpert-Smith chart) math and rendering library with egui integration"
license = "MIT"

[dependencies]
kurbo = "0.13"
egui = "0.33"
eframe = "0.33"
itertools-num = "0.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
